chore: Package Binary Search and Less-Than-K functions as Docker containers and deploy as API services using FastAPI

--- a/quantum_submit.ipynb
+++ b/quantum_submit.ipynb
@@ -223,11 +223,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Proposal for Deployment of Binary Search and Less-Than-K Functions as API Services\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "This proposal outlines a simple deployment approach for two functions: `search_k` and `less_than_k`. These functions will be packaged in a Docker container and published as API services using the FastAPI framework. This deployment strategy ensures that the services are portable, scalable, and easy to manage.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "- Package the `search_k` and `less_than_k` functions in a Docker container.\n",
+    "- Develop API services using FastAPI to expose the functionality.\n",
+    "- Ensure the API services are scalable and can be easily deployed on various platforms.\n",
+    "\n",
+    "## Deployment Approach\n",
+    "\n",
+    "### 1. Package the Program in a Docker Container\n",
+    "\n",
+    "#### Dockerfile\n",
+    "\n",
+    "Create a `Dockerfile` to define the environment and dependencies required for the program:\n",
+    "\n",
+    "```dockerfile\n",
+    "# Use an official Python runtime as a parent image\n",
+    "FROM python:3.9-slim\n",
+    "\n",
+    "# Set the working directory in the container\n",
+    "WORKDIR /app\n",
+    "\n",
+    "# Copy the current directory contents into the container at /app\n",
+    "COPY . /app\n",
+    "\n",
+    "# Install any needed packages specified in requirements.txt\n",
+    "RUN pip install --no-cache-dir -r requirements.txt\n",
+    "\n",
+    "# Make port 80 available to the world outside this container\n",
+    "EXPOSE 80\n",
+    "\n",
+    "# Define environment variable\n",
+    "ENV NAME BinarySearchAPI\n",
+    "\n",
+    "# Run app.py when the container launches\n",
+    "CMD [\"uvicorn\", \"app:app\", \"--host\", \"0.0.0.0\", \"--port\", \"80\"]\n",
+    "```\n",
+    "\n",
+    "#### requirements.txt\n",
+    "\n",
+    "Create a `requirements.txt` file to specify the Python dependencies:\n",
+    "\n",
+    "```\n",
+    "fastapi\n",
+    "uvicorn\n",
+    "```\n",
+    "\n",
+    "### 2. Develop the API Service using FastAPI\n",
+    "\n",
+    "Create an `app.py` file to define the API endpoints:\n",
+    "\n",
+    "```python\n",
+    "from fastapi import FastAPI\n",
+    "from pydantic import BaseModel\n",
+    "import random\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "class ListRequest(BaseModel):\n",
+    "    n: int\n",
+    "\n",
+    "class SearchRequest(BaseModel):\n",
+    "    k: int\n",
+    "    list_n: list\n",
+    "\n",
+    "@app.post(\"/generate_list\")\n",
+    "def generate_random_list(request: ListRequest):\n",
+    "    n = request.n\n",
+    "    list_n = []\n",
+    "    for _ in range(n * 2):\n",
+    "        temp = random.getrandbits(n)\n",
+    "        while temp in list_n:\n",
+    "            temp = random.getrandbits(n)\n",
+    "        list_n.append(temp)\n",
+    "    k = random.getrandbits(n)\n",
+    "    return {\"k\": k, \"list_n\": list_n}\n",
+    "\n",
+    "@app.post(\"/search_k\")\n",
+    "def search_k(request: SearchRequest):\n",
+    "    k = request.k\n",
+    "    list_n = request.list_n\n",
+    "    list_n.sort()\n",
+    "    if k == list_n[0] or k == list_n[-1]:\n",
+    "        return {\"found\": True, \"n_steps\": 1}\n",
+    "    \n",
+    "    left = 0\n",
+    "    right = len(list_n) - 1\n",
+    "    n_steps = 0\n",
+    "\n",
+    "    while left <= right:\n",
+    "        n_steps += 1\n",
+    "        mid = (left + right) // 2\n",
+    "\n",
+    "        if k == list_n[mid]:\n",
+    "            return {\"found\": True, \"n_steps\": n_steps}\n",
+    "        elif k < list_n[mid]:\n",
+    "            right = mid - 1\n",
+    "        else:\n",
+    "            left = mid + 1\n",
+    "\n",
+    "    return {\"found\": False, \"n_steps\": n_steps}\n",
+    "\n",
+    "@app.post(\"/less_than_k\")\n",
+    "def less_than_k(request: SearchRequest):\n",
+    "    k = request.k\n",
+    "    list_n = request.list_n\n",
+    "    list_n.sort()\n",
+    "\n",
+    "    k_exist, n_steps = search_k(SearchRequest(k=k, list_n=list_n))\n",
+    "\n",
+    "    if not k_exist:\n",
+    "        return {\"list_nk\": [], \"n_steps\": 1}\n",
+    "\n",
+    "    result = []\n",
+    "    for idx, num in enumerate(list_n):\n",
+    "        n_steps += 1\n",
+    "        if num < k:\n",
+    "            result.append(num)\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return {\"list_nk\": result, \"n_steps\": n_steps}\n",
+    "\n",
+    "@app.get(\"/\")\n",
+    "def read_root():\n",
+    "    return {\"message\": \"Welcome to Binary Search API\"}\n",
+    "```\n",
+    "\n",
+    "### 3. Build and Run the Docker Container\n",
+    "\n",
+    "#### Build the Docker Image\n",
+    "\n",
+    "```bash\n",
+    "docker build -t binary-search-api .\n",
+    "```\n",
+    "\n",
+    "#### Run the Docker Container\n",
+    "\n",
+    "```bash\n",
+    "docker run -d -p 80:80 binary-search-api\n",
+    "```\n",
+    "\n",
+    "### 4. Publishing the API Service\n",
+    "\n",
+    "Deploy the Docker container to a cloud provider like AWS, Google Cloud, or Azure using their respective container services (e.g., Amazon ECS, Google Kubernetes Engine, Azure Kubernetes Service).\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "By packaging the `search_k` and `less_than_k` functions as Docker containers and deploying them as API services using FastAPI, we ensure that the solution is scalable, portable, and easy to manage. This approach allows the service to be deployed on various platforms, providing flexibility and ease of integration.\n",
+    "\n",
     "### References\n",
     "\n",
-    "This project utilized ChatGPT to \n",
+    "This project utilized ChatGPT to:\n",
     "- Assist in the discussion.\n",
-    "- Assist in Bonus 2."
+    "- Assist in the deployment approach."
    ]
   },
   {
