chore: Refactor code to improve readability and add documentation

--- a/quantum_submit.ipynb
+++ b/quantum_submit.ipynb
@@ -1,20 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import random"
+    "### Random List Generation\n",
+    "The `generate_random_list` function generates a list of unique random integers and a target number *k*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "def generate_random_list(n: int):\n",
     "  \"\"\"\n",
     "  n: positive integer value\n",
@@ -47,6 +47,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Duplicate Random List Generation\n",
+    "\n",
+    "The `generate_random_list_duplicatable` function allows duplicate values in the list."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -64,6 +73,15 @@
     "\n",
     "  k = random.getrandbits(n)\n",
     "  return k, list_n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Search for `k`\n",
+    "\n",
+    "The `search_k` function performs a binary search to check if `k` exists in the list."
    ]
   },
   {
@@ -107,6 +125,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Numbers Less Than `k`\n",
+    "\n",
+    "The `less_than_k` function finds all numbers in the list that are less than `k`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -145,6 +172,13 @@
     "      checkIndex += 1\n",
     "\n",
     "    return (list_nk, n_steps)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example Usage"
    ]
   },
   {
